[Mac] Test for Content Setting Decoration

BUG=683823

Review-Url: https://codereview.chromium.org/2651333004
Cr-Commit-Position: refs/heads/master@{#446816}

Former-commit-id: fc363036700c132abd59176a2ca039c1fea3c5bc